# opengl_tutorials

./: .gitignore  .gitmodules  Makefile.am  README.md  camera.c  compile.sh  configure.ac  log_compile.txt  memcpy_test.c  shader.c
getting_started/camera/: exercise1.c
getting_started/coordinates/: 2coordinates.c  3coordinates.c  exercise1.c  exercise3.c
getting_started/rectangle/: helloRectangle.c
getting_started/shaders/: 1shaders.c  2shaders.c  shadersEx3.c
getting_started/textures/: exercise1.c  textures.c
getting_started/transformations/: compilepp.sh  exercise2.c
getting_started/triangle/: helloTriangle.c
headers/: camera.h  light.h  linmath_extension.h  model.h  shader.h  stb.h
lighting/: compile.sh
lighting/colors/: colors.c
shaders/basic_lighting/: cube_vert
shaders/camera/: frag
shaders/colors/: backup_cube_frag
shaders/textures/: frag  fragEx1
shaders/transformations/: vert
src/: Makefile  camera.c  light.c  mkso.sh  model.c  shader.c
src/advanced_lighting/blinn-phong/: main.c
src/advanced_lighting/gamma_correction/: main.c
src/advanced_lighting/normal_mapping/: main.c
src/advanced_lighting/point_shadows/: Makefile  README.md  main.c
src/advanced_lighting/shadow_mapping/: Makefile  main.c
src/advanced_opengl/anti_aliasing/: main.c
src/advanced_opengl/cubemaps/: Makefile  main.c
src/advanced_opengl/depth_testing/: main.c
src/advanced_opengl/stencil_testing/: main.c
src/getting_started/camera/: .gitignore  2camera.c  (+3 more)
src/old_build_scripts/: Makefile.am  Makefile.tmp
test/: Makefile  constants.c  memcpy_test.c
(+126 files in other folders)
